--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="labella.js"></script>
     <script src="d3.js"></script>
+    <script src="d3kit.js"></script>
     <script src="script.js"></script>
+
     <title>Document</title>
 </head>
 <body>
-    <h1>TEST</h1>
+    <p>TEST</p>
 </body>
-
 </html>
